service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextjs-app-service
  name: nextjs-app-service
  namespace: default
spec:
  ports:
    - name: 3000-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: nextjs-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
